# centerpoint_detector_ros

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/: pointCloudCallback.h  trtCenterPoint.h
launch/: run.launch
models/: pfe.engine  pfe_bunker.engine  pfe_fp.engine  pfe_int8.engine
src/: pcl_sub_node.cpp  trtCenterPoint.cpp
